@@ -1,3 +1,7 @@
+2002-09-01  Vincent Untz  <vincent@vuntz.net>
+
+	* membership-form.php: made it strip the slashes before the quotes.
+
 2002-08-31  Mike Newman  <mike@gtnorthern.demon.co.uk>
 
 	* membership-policy.html: Fixed to reflect current renewal process.
